GNOME Bugzilla – Bug 734599
NetworkManagerUtils: fix build with toolchains not exporting CLOCK_BOOTTIME
Last modified: 2014-08-11 11:19:00 UTC
Created attachment 283068 [details] [review] patch fixing issue E.G. uClibc 0.9.33 and earlier. http://autobuild.buildroot.net/results/c13/c1388cf73961ddf06f771afe77a7e1e9fc0d8c20/build-end.log
Looks just right. Patch applied: master: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=123322c6d61b8db9e8e7a627c80d8d4df43a5c8d nm-0-9-10: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=742f1da1d1932237656add96c643e5b688146692 Thanks